[tool.poetry]
name = "sensor-comparison"
version = "0.1.0"
description = ""
authors = ["Yal Fuentes <wensenlao@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0" 
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
statsmodels = "0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
flake8 = "^3.9.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
